--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: copy file via ssh password
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.DEV1_HOST }}
+          host: "${{ secrets.DEV1_HOST }},${{ secrets.DEV2_HOST }}"
           username: ${{ secrets.DEV1_USERNAME }}
           password: ${{ secrets.DEV1_PASSWORD }}
           port: ${{ secrets.DEV1_PORT }}
@@ -37,7 +37,8 @@ jobs:
       - name: Deploy command
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DEV1_HOST }}
+          host: "${{ secrets.DEV1_HOST }},${{ secrets.DEV2_HOST }}"
+          sync: true
           username: ${{ secrets.DEV1_USERNAME }}
           password: ${{ secrets.DEV1_PASSWORD }}
           port: ${{ secrets.DEV1_PORT }}
